# mpsbluetooth

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  mpsbluetooth.c
lib/include/: mpsbluetooth.h
test/: CMakeLists.txt
test/manual/: CMakeLists.txt  main.c
test/mpsbluetooth/: CMakeLists.txt  mpsbluetooth_test.cpp
